turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:48: error: too many arguments for method apply: (i: Int)Int in class Array
  rule=Array(Array(Array(1,8,0)(1,2,1) , Array(0,1,0)(0,1,1)))
                               ^Turmite:48: error: too many arguments for method apply: (i: Int)Int in class Array
  rule=Array(Array(Array(1,8,0)(1,2,1) , Array(0,1,0)(0,1,1)))
                                                     ^